[gd_scene load_steps=13 format=1]

[ext_resource path="res://scripts/tela.gd" type="Script" id=1]
[ext_resource path="res://img/menu_itens/menu_2.png" type="Texture" id=2]
[ext_resource path="res://img/menu_itens/play.png" type="Texture" id=3]
[ext_resource path="res://img/menu_itens/play_pressed.png" type="Texture" id=4]
[ext_resource path="res://img/menu_itens/play_hover.png" type="Texture" id=5]
[ext_resource path="res://img/menu_itens/sobre.png" type="Texture" id=6]
[ext_resource path="res://img/menu_itens/sobre_pressed.PNG" type="Texture" id=7]
[ext_resource path="res://img/menu_itens/sobre_hover.PNG" type="Texture" id=8]
[ext_resource path="res://img/menu_itens/sair_amarelo.png" type="Texture" id=9]
[ext_resource path="res://img/menu_itens/sair_vermelho.png" type="Texture" id=10]
[ext_resource path="res://img/menu_itens/sair_azul.png" type="Texture" id=11]
[ext_resource path="res://img/menu_itens/titulo.png" type="Texture" id=12]

[node name="tela" type="EventPlayer"]

stream/stream = null
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/pitch_scale = 1.0
stream/tempo_scale = 1.0
stream/autoplay = false
stream/paused = false
script/script = ExtResource( 1 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

layer = -1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
scroll/offset = Vector2( 0, 0 )
scroll/base_offset = Vector2( 0, 0 )
scroll/base_scale = Vector2( 1, 1 )
scroll/limit_begin = Vector2( 0, 0 )
scroll/limit_end = Vector2( 0, 0 )
scroll/ignore_camera_zoom = true

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

motion/scale = Vector2( 1, 1 )
motion/offset = Vector2( 0, 0 )
motion/mirroring = Vector2( 0, 0 )

[node name="TextureFrame" type="TextureFrame" parent="ParallaxBackground/ParallaxLayer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1025.0
margin/bottom = 641.0
texture = ExtResource( 2 )
stretch_mode = 0

[node name="jogar" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 659.0
margin/top = 216.0
margin/right = 903.0
margin/bottom = 280.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
textures/pressed = ExtResource( 4 )
textures/hover = ExtResource( 5 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="sobre" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 660.0
margin/top = 315.0
margin/right = 904.0
margin/bottom = 379.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 6 )
textures/pressed = ExtResource( 7 )
textures/hover = ExtResource( 8 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="sair" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 657.0
margin/top = 412.0
margin/right = 901.0
margin/bottom = 476.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 9 )
textures/pressed = ExtResource( 10 )
textures/hover = ExtResource( 11 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="TextureFrame" type="TextureFrame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 102.0
margin/top = 7.0
margin/right = 803.0
margin/bottom = 152.0
texture = ExtResource( 12 )
stretch_mode = 0

[connection signal="pressed" from="jogar" to="." method="_on_jogar_pressed"]

[connection signal="pressed" from="sobre" to="." method="_on_sobre_pressed"]

[connection signal="pressed" from="sair" to="." method="_on_sair_pressed"]


